--- a/static/test.css
+++ b/static/test.css
@@ -120,4 +120,44 @@ section h2{
         width: 100%;
         height: auto;
     }
+    .product-container {
+        padding: 20px;
+    }
+    .product-card-right {
+        padding: 20px;
+    }
+    .price {
+        flex-direction: column;
+        align-items: center;
+    }
+    .price p {
+        text-align: center;
+        margin-bottom: 10px;
+        font-size: 18px;
+        width: 85%;
+    }
+    .price button {
+        width: 85%;
+        margin-top: 15px;
+        font-size: 18px;
+    }
+    .card-livreson {
+        padding: 20px;
+    }
+    .section-box {
+        padding: 10px;
+    }
+    .title, section h2 {
+        font-size: 20px;
+    }
+    .product-card-right h3 {
+        font-size: 18px;
+    }
+    .product-container img {
+        height: 400px;
+    }
+    .section-title{
+        font-size: 22px !important;
+        text-align: center !important;
+    }
 }
