--- a/static/style.css
+++ b/static/style.css
@@ -181,6 +181,7 @@ header .container nav ul li:not(:last-child) a{
         width: 40px; 
         height: 40px;
         object-fit: contain;
+        margin-bottom: 7px;
     }
 
     .logo {
